--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "faker": "^4.1.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
