--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -13,8 +14,11 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "enzyme": "^2.9.1",
+    "babel-jest": "^21.2.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
     "faker": "^4.1.0",
+    "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.3.0"
   },
@@ -23,5 +27,30 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/api/**",
+      "!**/assets/**",
+      "!**/build/**",
+      "!**/coverage/**",
+      "!**/store/**",
+      "!**/vendor/**",
+      "!**/ActionTypes.js",
+      "!**/index.js",
+      "!**/registerServiceWorker.js",
+      "!**/setupTests.js",
+      "!**/tempPolyfills.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
