--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "react-icons": "^2.2.7"
   },
   "jest": {
@@ -29,6 +31,7 @@
       "!**/vendor/**",
       "!**/ActionTypes.js",
       "!**/index.js",
+      "!**/App.js",
       "!**/registerServiceWorker.js",
       "!**/setupTests.js",
       "!**/tempPolyfills.js"
