updated action tests

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "react-icons": "^2.2.7"
