--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "faker": "^4.1.0",
     "jest": "^21.2.1",
     "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
     "style-loader": "^0.19.0",
