updated tests and prop types for custom functions and componets

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
       "!**/setupTests.js",
       "!**/tempPolyfills.js",
       "!**/stories/**",
-      "!**/webpack*.js"
+      "!**/webpack*.js",
+      "!**/testUtils/**"
     ],
     "coverageThreshold": {
       "global": {
