--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react-dom": "^16.1.1",
-    "react-icons": "^2.2.7",
+    "react-icons": "^2.2.7"
   },
   "jest": {
     "setupFiles": [
