--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-collapsing-table",
-  "version": "0.0.9",
+  "version": "0.0.3",
   "description": "Put a description here",
   "main": "build/index.js",
   "peerDependencies": {
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "^16.1.0",
-    "webpack": "^1.0.4"
+    "webpack": "^3.4.1"
   },
   "scripts": {
     "test": "jest --watch --env=jsdom",
@@ -21,20 +21,30 @@
   },
   "author": "Paul Darragh <pmd6624@rit.edu>",
   "devDependencies": {
+    "@storybook/addon-links": "^3.2.16",
+    "@storybook/addon-options": "^3.2.16",
+    "@storybook/react": "^3.2.16",
+    "@storybook/storybook-deployer": "^2.0.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
+    "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^21.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react-dom": "^16.1.1",
-    "react-icons": "^2.2.7"
+    "react-icons": "^2.2.7",
+    "style-loader": "^0.19.0",
+    "webpack-babel-jest": "^1.0.4"
   },
   "jest": {
     "setupFiles": [
