--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - '6'
 script:
   - npm run coverage
-  - npm run build
+#  - npm run build
 #deploy:
 #  provider: npm
 #  email: "automation@m38.io"
