--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-collapsing-table: a React rewrite of the jQuery table plugin from 'datatables.net'. Inspired by a lack of similar table behaviors, notably collapsibility and responsivity.",
   "main": "build/index.js",
   "peerDependencies": {
-    "react": "^16.x.x"
+    "react": "^15.x.x || ^16.x.x"
   },
   "dependencies": {
     "react": "^16.1.0",
