--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest --watch --env=jsdom",
     "coverage": "jest --coverage",
     "start": "webpack --watch & yarn run storybook",
-    "build": "webpack",
+    "build": "webpack -p",
+    "push": "npm run build && npm publish",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages"
@@ -39,7 +40,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^21.2.1",
-    "lodash": "^4.17.4",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
     "prop-types": "^15.6.0",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
