--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,6 @@
   "presets": ["env"],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-react-jsx",
-    "transform-class-properties"
+    "transform-react-jsx"
   ]
 }
