--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,33 @@
+# Documentation
 /.storybook
-/src
 /stories
+README.md
+
+# Code
+/src
 .travis.yml
+webpack.config.js
+.npmignore
+
+# Testing
+/coverage
+
+# Dependencies
+/node_modules
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.idea
+
+# errors
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.npmrc
+.babelrc
