--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "jest --watch --env=jsdom",
     "coverage": "jest --coverage",
-    "start": "webpack --watch & yarn run storybook",
+    "start": "webpack --watch & npm run storybook",
     "build": "webpack -p",
     "push": "npm run build && npm publish",
     "storybook": "start-storybook -p 6006",
@@ -40,6 +40,7 @@
     "faker": "^4.1.0",
     "jest": "^21.2.1",
     "lodash.throttle": "^4.1.1",
+    "moment": "^2.19.4",
     "prop-types": "^15.6.0",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
