--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^21.2.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.19.4",
     "prop-types": "^15.6.0",
