--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jest": "^21.2.1",
+    "jsverify": "^0.8.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.19.4",
