--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "author": "Paul Darragh <pmd6624@rit.edu>",
   "devDependencies": {
-    "@storybook/addon-info": "^3.4.0-alpha.1",
-    "@storybook/addon-links": "^3.2.16",
+    "@storybook/addon-knobs": "^3.2.16",
     "@storybook/addon-options": "^3.2.16",
     "@storybook/react": "^3.2.16",
     "@storybook/storybook-deployer": "^2.0.0",
